<?xml version="1.0"?>
<package>
  <name>ropod_experiment_executor</name>
  <version>1.0.0</version>
  <description>Package for performing controlled experiments with a ropod</description>

  <author email="aleksandar.mitrevski@h-brs.de">Alex Mitrevski</author>
  <maintainer email="aleksandar.mitrevski@h-brs.de">Alex Mitrevski</maintainer>

  <license>GPLv3</license>
  <url type="website">http://ropod.org/</url>

  <build_depend>rospy</build_depend>
  <build_depend>ropod_ros_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>ropod_ros_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
